# do-bot

./: .gitignore  Cargo.toml  README.md
src/: bincode.rs  clear.rs  datetime.rs  main.rs  structs.rs
