[package]
name = "do-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bincode = "2.0.1"
chrono = "0.4.41"
chrono-tz = "0.10.4"
futures = "0.3.31"
nom = "8.0.0"
poise = "0.6.1"
rand = "0.9.2"
redb = "2.6.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.0", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["full"] }
